# datastory

./: Cargo.toml  README.md  rapport.html  report.html  report.md
.github/workflows/: ci.yml
benches/: analysis_bench.rs
src/: analyze.rs  formats.rs  lib.rs  main.rs  report.rs
tests/: analyze_tests.rs  report_tests.rs
