[lib]
name = "datastory"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
[package]
name = "datastory"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.1"
plotters = "0.3"
pyo3 = { version = "0.21", features = ["extension-module"] }
parquet = "16.0"
serde_json = "1.0"
chrono = "0.4.43"
genpdf = "0.2.0"

[dev-dependencies]
criterion = "0.8.1"
